buttons to launch rolls, closes #48

--- a/HU/hu-04-03.md
+++ b/HU/hu-04-03.md
@@ -6,7 +6,7 @@ Como usuario quiero lanzar dados en una sola tirada. Para ello sólo quiero puls
 
 * Cuando el usuario pincha en un botón, se lanzan el número correspondiente de dados.
 
-* SHOULD: El resultado se verá en el chat también como iconos.
+* DROP: El resultado se verá en el chat también como iconos.
 
-* SHOULD: permitir dados explosivos.
+* DROP: permitir dados explosivos.
 
